# Web-application-for-club-members

./: README.md  index.html
admin/: app.py  pyproject.toml
admin/private/photos/: README
admin/private/qrs/: README
admin/public/: associates_export.css  error.css  login.css  main.css
admin/src/core/: database.py  seeds.py
admin/src/core/adminConfig/: __init__.py  config.py
admin/src/core/associates/: __init__.py  associate.py  category.py  discipline.py
admin/src/core/auth/: __init__.py  permission.py  role.py  user.py
admin/src/core/disciplines/: __init__.py
admin/src/core/payments/: __init__.py  fee.py  receipt.py
admin/src/web/: __init__.py  config.py
admin/src/web/controllers/: api.py  associates.py  auth.py  config.py  disciplines.py  inscriptions.py  payments.py  users.py
admin/src/web/helpers/: auth.py  auxiliar_functions.py  handlers.py  permission.py
admin/src/web/templates/: config.html  error.html  home-logout.html  home.html  layout.html  navbar-logout.html  navbar.html
admin/src/web/templates/associates/: associate_carnet.html  associate_list.html  associate_show.html  associate_update.html  create_associate.html  export_associates.html
admin/src/web/templates/auth/: login.html
admin/src/web/templates/disciplines/: discipline_detail.html  disciplines.html  disciplines_edit.html
admin/src/web/templates/inscriptions/: inscriptions.html
admin/src/web/templates/payments/: payments_list.html  payments_manage.html  payments_pdf_receipt.html
admin/tests/: test_api_pagos.py  test_auth.py  test_disciplines.py  test_web.py
(+28 files in other folders)
