[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Nahuel Herpo <nahuelherpo@gmail.com>"]
readme = "README.md"
packages = [{include = "web", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.41"
Flask-WTF = "^1.0.1"
bcrypt = "^4.0.0"
pandas = "^1.5.0"
Flask-RESTful = "^0.3.9"
pdfkit = "^1.0.0"
wkhtmltopdf = "^0.2"
qrcode = "^7.3.1"
Pillow = "^9.3.0"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "^4.4.4"
psycopg2-binary = "^2.9.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
flask-shell-ipython = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
